# agent-chaos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/ecommerce-support-agent/: Makefile  agent.py  pyproject.toml
examples/ecommerce-support-agent/scenarios/: __init__.py  baseline.py  baselines.py  chaos_scenarios.py  commons.py  deepeval_quality.py  fuzz_scenarios.py  llm_failures.py  multi_turn.py  quickstart.py  semantic_attacks.py  tool_failures.py
scripts/pydantic_ai_tests/: Makefile  README.md  agent.py  pyproject.toml
scripts/pydantic_ai_tests/scenarios/: __init__.py  baseline.py  context_scenarios.py  edge_scenarios.py  llm_scenarios.py  multi_scenarios.py  mutators.py  semantic_scenarios.py  streaming_scenarios.py  tool_scenarios.py  user_scenarios.py
src/agent_chaos/: __init__.py  cli.py  fuzz.py  types.py
src/agent_chaos/chaos/: CLAUDE.md  __init__.py  base.py  builder.py  context.py  history.py  llm.py  stream.py  tool.py  user.py
src/agent_chaos/core/: CLAUDE.md  __init__.py  context.py  injector.py  metrics.py  recorder.py
src/agent_chaos/core/metrics/: __init__.py  models.py  store.py
src/agent_chaos/events/: CLAUDE.md  __init__.py  jsonl.py  sink.py  types.py  ui_sink.py
src/agent_chaos/integrations/: CLAUDE.md  deepeval.py  pydantic_evals.py
src/agent_chaos/patch/: CLAUDE.md  base.py  patcher.py
src/agent_chaos/patch/providers/: anthropic.py
src/agent_chaos/scenario/: CLAUDE.md  __init__.py  assertions.py  loader.py  model.py  report.py  runner.py
src/agent_chaos/stream/: CLAUDE.md  anthropic.py
src/agent_chaos/ui/: CLAUDE.md  events.py  server.py
src/agent_chaos/ui/static/: app.js  app.v2.js  app.v3.js  app.v4.js  index.html  index.v2.html  index.v3.html  index.v4.html  styles.css  styles.v2.css  styles.v3.css  (+1 more)
tests/: conftest.py
tests/chaos/: test_base.py  test_builder.py  test_context.py  test_history.py  test_llm.py  test_stream.py  test_tool.py  test_user.py
tests/core/: test_context.py  test_injector.py  test_metrics.py  test_recorder.py
tests/events/: test_jsonl.py  test_sink.py  test_types.py
tests/integrations/: __init__.py  test_pydantic_evals.py
tests/scenario/: test_assertions.py  test_model.py
