[project]
name = "agent-chaos"
version = "0.1.2"
description = "Chaos Engineering for AI Agents"
readme = "README.md"
authors = [
    { name = "Deepankar Mahapatro", email = "deepankarmahapatro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=14.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.75.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.40.0"]
all = [
    "agent-chaos[anthropic]",
    "agent-chaos[openai]",
    "agent-chaos[gemini]",
]

[project.scripts]
agent-chaos = "agent_chaos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deepeval>=3.7.6",
    "ruff>=0.14.10",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/agent_chaos --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/agent_chaos"]
omit = [
    # CLI and UI require integration testing
    "src/agent_chaos/cli.py",
    "src/agent_chaos/ui/*",
    "src/agent_chaos/__main__.py",
    # Provider-specific stream wrappers require external API mocking
    "src/agent_chaos/stream/*",
    "src/agent_chaos/patch/providers/*",
    # External integrations require their respective packages
    "src/agent_chaos/integrations/*",
    # YAML scenario loader requires filesystem testing
    "src/agent_chaos/scenario/loader.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
