[project]
name = "pydantic-ai-chaos-tests"
version = "0.1.0"
description = "Testing agent-chaos with pydantic-ai agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.30",
    "agent-chaos @ file:///${PROJECT_ROOT}/../..",
    "httpx>=0.27",
    "ruff>=0.14.10",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
agent-chaos = { path = "../.." }

# run ruff automatically
[tool.ruff]
line-length = 120
